<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_marginLeft="41dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="27dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_onfirmation_number"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="285dp"
                android:layout_marginRight="285dp"
                android:layout_marginBottom="27dp"
                android:text="Filmes"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="126dp"
                android:layout_height="206dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_info"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:srcCompat="@drawable/vingadores_cartaz" />

            <Button
                android:id="@+id/btn_info"
                android:layout_width="93dp"
                android:layout_height="43dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="134dp"
                android:background="@drawable/button_info"
                android:onClick="Info"
                android:text="@string/btn_info"
                android:textColor="#fff"
                app:layout_constraintBottom_toTopOf="@+id/txt_filme2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/txt_filme1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="126dp"
                android:layout_height="340dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="320dp"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                app:layout_constraintEnd_toStartOf="@+id/txt_filme2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                app:srcCompat="@drawable/starwars_cartaz" />

            <TextView
                android:id="@+id/txt_filme1"
                android:layout_width="157dp"
                android:layout_height="50dp"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="115dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                android:text="@string/txt_filme1"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_filme2"
                android:layout_width="172dp"
                android:layout_height="53dp"
                android:layout_marginTop="216dp"
                android:layout_marginEnd="41dp"
                android:layout_marginRight="41dp"
                android:text="@string/txt_filme2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/btn_info" />

            <Button
                android:id="@+id/btn_info2"
                android:layout_width="93dp"
                android:layout_height="43dp"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:background="@drawable/button_info"
                android:onClick="Info1"
                android:text="@string/btn_info"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/txt_filme2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="172dp"
                android:layout_height="53dp"
                android:layout_marginTop="204dp"
                android:layout_marginEnd="41dp"
                android:layout_marginRight="41dp"
                android:layout_marginBottom="27dp"
                android:text="@string/txt_filme3"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_info4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/btn_info2" />

            <Button
                android:id="@+id/btn_info4"
                android:layout_width="93dp"
                android:layout_height="43dp"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:background="@drawable/button_info"
                android:onClick="Info2"
                android:text="@string/btn_info"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="124dp"
                android:layout_height="319dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/avatar_cartaz" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>